[gd_scene load_steps=7 format=2]

[ext_resource path="res://gs/main.gd" type="Script" id=1]
[ext_resource path="res://sc/ts/IMG_20230427_184039.jpg" type="Texture" id=2]
[ext_resource path="res://ft/simhei.tres" type="DynamicFont" id=3]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://ft/SIMHEI.TTF"

[sub_resource type="DynamicFont" id=2]
size = 400
outline_size = 2
outline_color = Color( 0.109804, 0.0588235, 0.0588235, 1 )
font_data = SubResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.8, 0.254902, 0.254902, 0 )

[node name="main" type="Node2D"]
script = ExtResource( 1 )

[node name="new game" type="Button" parent="."]
anchor_right = 0.44
margin_left = 1000.0
margin_top = 800.0
margin_right = 1530.0
margin_bottom = 900.003
hint_tooltip = "new game"
custom_fonts/font = ExtResource( 3 )
action_mode = 0
text = "新游戏"

[node name="continue" type="Button" parent="."]
margin_left = 1000.0
margin_top = 950.0
margin_right = 1530.0
margin_bottom = 1050.0
hint_tooltip = "continue"
custom_fonts/font = ExtResource( 3 )
action_mode = 0
text = "继续"

[node name="setting" type="Button" parent="."]
margin_left = 1000.0
margin_top = 1100.0
margin_right = 1530.0
margin_bottom = 1200.0
hint_tooltip = "setting"
custom_fonts/font = ExtResource( 3 )
action_mode = 0
text = "设置"

[node name="quit" type="Button" parent="."]
margin_left = 1000.0
margin_top = 950.0
margin_right = 1539.0
margin_bottom = 1050.0
rect_pivot_offset = Vector2( 69, -491 )
hint_tooltip = "quit"
custom_fonts/font = ExtResource( 3 )
action_mode = 0
text = "退出"

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Img20230427184039" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 1280, 720 )
scale = Vector2( 2.83, 2.35 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
margin_left = 560.0
margin_top = 299.0
margin_right = 2160.0
margin_bottom = 700.0
rect_scale = Vector2( 0.909259, 0.942752 )
custom_colors/font_color = Color( 0.964706, 0.313726, 0.313726, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "机 舱 餐"
align = 1

[connection signal="pressed" from="new game" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="setting" to="." method="_on_setting_pressed"]
[connection signal="pressed" from="quit" to="." method="_on_quit_pressed"]
